Closed
Bug 646067
Opened 14 years ago
Closed 14 years ago
Browser no longer uses entire screen when using full screen mode from maximized window state
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: mozbugz, Assigned: jimm)
References
Details
(Keywords: regression)
Attachments
(1 file)
814 bytes,
patch
|
robarnold
:
review+
|
Details | Diff | Splinter Review |
It seems if I start in normal mode I get full screen dimensions.
If I start in Maximized browser mode, and click on full screen, it enters full screen mode but my browser window is back to normal size.
Reporter | ||
Updated•14 years ago
|
Keywords: regression
![]() |
Assignee | |
Comment 1•14 years ago
|
||
Dennis, can you post STR? Full screen transitions from normal and maximized are working fine for me.
![]() |
Assignee | |
Comment 2•14 years ago
|
||
(In reply to comment #1)
> Dennis, can you post STR? Full screen transitions from normal and maximized are
> working fine for me.
Ah, never mind. I can reproduce.
Comment 3•14 years ago
|
||
Maybe it's related: when switching from a maximized window to full screen and then back, the addon bar gets hidden under the Windows taskbar.
Updated•14 years ago
|
Severity: normal → major
Component: General → Widget
Product: Firefox → Core
QA Contact: general → general
![]() |
Assignee | |
Comment 4•14 years ago
|
||
We were falling through to default due to the missing full screen handler here. That calls ShowWindow(mWnd, SW_SHOWNORMAL). This bug has been around forever but it's probably never been triggered until now. (Bug 634586 uses Show to briefly hide the window while we transition.)
Assignee: nobody → jmathies
Attachment #522719 -
Flags: review?(tellrob)
Updated•14 years ago
|
Component: Widget → Widget: Win32
QA Contact: general → win32
The entire screen also flashes before switching to Full Screen mode (F11). This didn't occur in previous builds.
Updated•14 years ago
|
Attachment #522719 -
Flags: review?(tellrob) → review+
![]() |
Assignee | |
Comment 6•14 years ago
|
||
(In reply to comment #5)
> The entire screen also flashes before switching to Full Screen mode (F11).
> This didn't occur in previous builds.
It doesn't flash really, it hides and shows briefly. The idea was to cut down on all the tearing when the page is full of content. Going from a normal window with content to full screen was always a rather painful thing to look at, this was an attempt to fix that.
![]() |
Assignee | |
Comment 7•14 years ago
|
||
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
This appears to be happening to me in Windows on the Nightly, with e10s enabled. I normally have my main Firefox window taking up the right side of my screen (by dragging the window to the right border of my screen, making it take up half the screen). When I press F11, the chrome enters fullscreen, but the content stays at its previous width until the navigation bar is done transitioning off the top of the screen, at which point it draws the content box at the expected size.
You need to log in
before you can comment on or make changes to this bug.
Description
•