Bug 646067 - In nsWindow's Show, use SW_SHOW vs. SW_SHOWNORMAL for full screen windows. r=robarnold